--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Conversor de Temperaturas</title>
+<link rel="stylesheet" href="index.css">
+</head>
+<body>
+
 <div class="container">
   <h1 class="page-title">
     Conversor de Temperaturas
@@ -8,3 +16,6 @@
   <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="" class="alura-logo">
   <img src="https://cdn-icons-png.flaticon.com/512/2204/2204445.png">
 </a>
+
+</body>
+</html>
